tests/baselines/reference/unusedVariablesinBlocks2.errors.txt
unusedVariablesinBlocks2.ts(2,9): error TS6133: 'x' is declared but its value is never read.
unusedVariablesinBlocks2.ts(4,13): error TS6133: 'x' is declared but its value is never read.


==== unusedVariablesinBlocks2.ts (2 errors) ====
    function f1 () {
        let x = 10;
            ~
!!! error TS6133: 'x' is declared but its value is never read.
        {
            let x = 11;
                ~
!!! error TS6133: 'x' is declared but its value is never read.
        }
    }